Fix menu with flex-col and collapse

--- a/assets/stylesheets/bookingsync/_layout.scss
+++ b/assets/stylesheets/bookingsync/_layout.scss
@@ -89,6 +89,10 @@ body {
 
     &.collapse {
       visibility: visible;
+
+      &.flex-col {
+        display: flex;
+      }
     }
   }
 }
